infra/kubernetes/argocd_gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: argocd
  namespace: argocd
spec:
  gatewayClassName: cilium
  listeners:
   - hostname: argocd.example.com
     name: argocd-example-com-http
     port: 80
     protocol: HTTP
   - hostname: argocd.example.com
     name: argocd-example-com-https
     port: 443
     protocol: HTTPS
  tls:
    certificateRefs:
    - kind: Secret
      name: argocd-server-tls
