infra/kubernetes/monitor_gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: monitor
  namespace: monitor
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTP
    port: 80
    name: monitor-gw
