infra/kubernetes/argocd_http_route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  hostnames:
   - argocd.example.com
   parentRefs:
   - name: argocd
   rules:
   - backendRefs:
     - name: argocd-server
       port: 80
     matches:
     - path:
         type: PathPrefix
         value: /
