infra/kubernetes/monitor_http_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monitor
  namespace: monitor
spec:
  parentRefs:
  - name: monitor
    namespace: monitor
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kube-prometheus-stack-grafana
      port: 80
